fix flex layout issue for flex grid

--- a/src/components/already-col/already-col.css
+++ b/src/components/already-col/already-col.css
@@ -1,8 +1,3 @@
 :host {
-  flex: calc(100% / var(--base-column-count) * var(--fraction));
-}
-
-::slotted(*) {
-  height: 100%;
-  width: 100%;
+  width: calc(var(--fraction) / var(--base-column-count) * 100%);
 }
